--- a/client/HMColorClient/styles.css
+++ b/client/HMColorClient/styles.css
@@ -1,6 +1,7 @@
 #puzzle_panel {
 	height: 400px;
 	overflow: hidden;
+	padding-bottom: 10px;
 }
 
 #puzzle_panel > * {
@@ -13,6 +14,7 @@
 }
 
 #score_panel {
+	display: inline-block;
 }
 
 #color_panel {
@@ -38,17 +40,12 @@
 }
 
 #guess_panel {
-	height: 2em;
 	margin-top: 10px;
+	width: 1000px;
 }
 
 #guess_panel > * {
+	display: inline-block;
 	height: 100%;
 }
-
-#guess_input {
-	resize: none;
-}
-
-#guess_submit {
-}
+s
